--- a/source/stylesheets/main/_content.scss
+++ b/source/stylesheets/main/_content.scss
@@ -70,8 +70,4 @@ article {
 			margin-left: 1em;
 		}
 	}
-	aside {
-		@include sidenote-border("left", $color: nth($palette-hue-tertiary, 2), $width: 8px);
-		padding-left: 1em;
-	}
 }
